--- a/Application-SPA/package.json
+++ b/Application-SPA/package.json
@@ -27,6 +27,7 @@
     "alertifyjs": "^1.11.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-gallery": "^5.3.2",
     "rxjs": "~6.3.3",
