adding photo edit functionality with ng2 file upload and cloudinary

--- a/Application.API/appsettings.json
+++ b/Application.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName":"dmaxfieqg",
+    "ApiKey":"783961564932717",
+    "ApiSecret":"yEg3_-B19j80m79wVR4b2upnap8"
+  }
 }
