--- a/Application-SPA/package.json
+++ b/Application-SPA/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-gallery": "^5.3.2",
     "rxjs": "~6.3.3",
