--- a/Application.API/Application.API.csproj
+++ b/Application.API/Application.API.csproj
@@ -7,8 +7,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.2"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.3.1"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2"/>
   </ItemGroup>
 </Project>
