adding net core identity

--- a/Application.API/appsettings.json
+++ b/Application.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token":"super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=datingApp; Uid=appuser; Pwd=malika12345K"
+    "DefaultConnection": "Data Source=Application.db"
   },
   "Logging": {
     "LogLevel": {
